--- a/estilo.css
+++ b/estilo.css
@@ -26,7 +26,7 @@
   
   body {
     height: 100%;
-    font-size: 12pt;
+    font-size: 12px;
     font-family: 'Inter', sans-serif;
     background-color: #F7F7F7;
     color: #011D2D;
@@ -42,10 +42,12 @@
     padding-bottom: 100px; }
   
 
+   
+
     /* titulos  */
 
     h1 {
-      font-size: 28pt;
+      font-size: 2.5rem;
       text-transform: uppercase;
       letter-spacing: 2pt;
       font-weight: bold;
@@ -60,7 +62,7 @@
 
 h3 {
 
-  font-size: 15pt;
+  font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 2pt;
   font-weight: bold;
@@ -73,11 +75,7 @@ h3 {
       font-weight: bold;
     }
 
-    hr {
-      color: #09C3F1;
-      
-    }
-
+  
 
   /* Menú */
 header {
@@ -90,12 +88,12 @@ header {
 }
 
 header img {
-  width: 300px;
+  width: 400px;
   height: auto;
 }
 
 nav#navbar {
-  font-size: 10pt;
+  font-size: 0.8rem;
   font-family: 'Inter', sans-serif;
   background: #06517B;
   top: 0;
@@ -123,11 +121,16 @@ ul.menu-list li.logo {
   overflow: hidden;
   transition: all 0.5s linear;
 }
-.logo > a > img {
-  max-width: 80px;
-}
+
+
 ul.menu-list li.logo > a {
   color:#011D2D;
+}
+
+i {
+  padding: 15px 30px 0px 30px;
+  color: #F7F7F7;
+  
 }
 
 ul.menu-list li > a {
@@ -137,6 +140,7 @@ ul.menu-list li > a {
   transition: 0.2s linar;
   text-transform: uppercase;
   letter-spacing: 2pt;
+  padding-top: 10px
   
 }
 body.fixed-nav nav#navbar {
@@ -155,6 +159,7 @@ body.fixed-nav li.logo {
  padding-bottom: 60px;
   text-align: right;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-image: url(img/elemento0.png);
@@ -163,26 +168,36 @@ body.fixed-nav li.logo {
   background-size: 900px;
   
 
-  
- 
  
 }
-
-.emsella img {
-
-   
-  width: 700px;
+#inicio img {
+  max-width: 100%;
   height: auto;
-  
-  /* border-radius: 30%; */
-  
 }
+button {
+  padding: 20px;
+  background-color: #011D2D;
+  color: #F7F7F7;
+  text-transform: uppercase;
+  letter-spacing: 2pt;
+  font-size: 0.8rem;
+  font-weight: bold;
+  border-radius: 8px;
+ 
+
+}
+
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
 
 #inicio p{
 
-  font-size: 12pt;
+  font-size: 1.3rem;
   line-height: 33pt;
-  font-size: 18pt;
+  
   
  
 }
@@ -193,14 +208,14 @@ body.fixed-nav li.logo {
   line-height: 33pt;
     letter-spacing: 1pt;
     padding: 18px;
-    font-size: 19pt;
+    font-size: 1.5rem;
 }
 .beneficios {
   text-align: center;
   text-transform: uppercase;
   padding: 20px;
   font-weight: bold;
-  font-size: 10pt;
+  font-size: 0.8rem;
   letter-spacing: 2pt;
   display: flex;
   justify-content: center;
@@ -227,7 +242,7 @@ body.fixed-nav li.logo {
 
 
 
-.elemento_0 {
+/* .elemento_0 {
   background-color: #eceef1;
   border-radius: 10% 30% 50% 70%;
   padding: 30px;
@@ -257,7 +272,7 @@ body.fixed-nav li.logo {
     -webkit-box-shadow: -12px 12px 20px -12px rgba(0, 0, 0, 0.40);
             box-shadow: -12px 12px 20px -12px rgba(0, 0, 0, 0.40);
   }
-}
+} */
 
 
 
@@ -270,7 +285,7 @@ body.fixed-nav li.logo {
   background-repeat: no-repeat;
   background-position:  center;
   background-size: 600px;
-  font-size: 13pt;
+  font-size: 1.1rem;
  
 }
 
@@ -288,7 +303,7 @@ text-align: center;
 #preguntas h2 {
   
     text-align: center;
-    font-size: 18pt;
+    font-size: 1.5rem;
     padding: 18px;
     background-color: #06517B;
     color: #F7F7F7;
@@ -310,7 +325,7 @@ text-align: center;
 #contacto h2 {
   
     text-align: center;
-    font-size: 18pt;
+    font-size: 1.5rem;
     padding: 18px;
     background-color: #06517B;
     color: #F7F7F7;
@@ -331,7 +346,7 @@ input,label,textarea {
   align-items: center;
   font-family: 'Inter', sans-serif;
   padding: 10px;
-  font-size: 13pt;
+  font-size: 1rem;
 
 }
 
@@ -371,7 +386,7 @@ textarea {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 11pt;
+  font-size: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -395,7 +410,7 @@ input[type=text]:focus, textarea:focus {
 
   text-align: center;
   font-weight: italic;
-  font-size: 10pt;
+  font-size: 0.8rem;
   padding-top: 15px;
 }
 /* footer */
@@ -408,4 +423,182 @@ input[type=text]:focus, textarea:focus {
   align-items: center;
   height: 300px;
   background-color: #B2C5CE;
+}
+
+@media only screen and (max-width: 768px) {
+    
+
+  /* Menú */
+  header {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #F7F7F7;
+    height: 25vh;
+  }
+  
+  header img {
+    width: 400px;
+    height: auto;
+  }
+  
+  nav#navbar {
+    font-size: 0.8rem;
+    font-family: 'Inter', sans-serif;
+    background: #06517B;
+    top: 0;
+    
+    width: 100%;
+    transition: all 0.5s linear;
+    z-index: 1;
+    
+  }
+  ul.menu-list {
+    
+    list-style: none;
+   
+  }
+  ul.menu-list li {
+   
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 10px ;
+  }
+  ul.menu-list li.logo {
+    max-width: 0;
+   
+    transition: all 0.5s linear;
+  }
+  
+  
+  ul.menu-list li.logo > a {
+    color:#011D2D;
+    display: none;
+  }
+  
+  i {
+    padding: 15px 30px 0px 30px;
+    color: #F7F7F7;
+    display: none;
+    visibility: none;
+    
+  }
+  
+  ul.menu-list li > a {
+    text-decoration: unset;
+    display: flex;
+    color: #fff;
+    transition: 0.2s linar;
+    text-transform: uppercase;
+    letter-spacing: 2pt;
+    padding-top: 10px
+    
+  }
+  body.fixed-nav nav#navbar {
+    position: fixed;
+    box-shadow: 0 1px 2px rgb(0 0 0 / 20%);
+  }
+  body.fixed-nav li.logo {
+    max-width: 300px;
+  }
+
+
+/* Inicio */
+
+#inicio {
+
+  padding-top: 100px;
+ padding-bottom: 60px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-image: url(img/elemento0.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 900px;
+  
+
+ 
+}
+#inicio img {
+  max-width: 100%;
+  height: auto;
+}
+
+
+#inicio p{
+
+  font-size: 1.3rem;
+  line-height: 33pt;
+  
+  
+ 
+}
+
+#inicio h1 {
+  text-align: center;
+}
+
+#inicio h2 {
+  text-align: center;
+  font-weight: bold;
+  line-height: 33pt;
+    letter-spacing: 1pt;
+    padding: 18px;
+    font-size: 1.5rem;
+}
+
+button {
+  padding: 20px;
+  background-color: #011D2D;
+  color: #F7F7F7;
+  text-transform: uppercase;
+  letter-spacing: 2pt;
+  font-size: 0.8rem;
+  font-weight: bold;
+  border-radius: 8px;
+ 
+
+}
+
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
+.beneficios {
+  text-align: center;
+  text-transform: uppercase;
+  padding: 20px;
+  font-weight: bold;
+  font-size: 0.8rem;
+  letter-spacing: 2pt;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+
+.beneficios img {
+
+  max-width: 130px;
+  height: auto;
+  padding: 10px;
+}
+
+.beneficios p {
+  padding: 10px;
+}
+
+.dedo p {
+
+  padding: 17px;
+}
+
+
 }
