--- a/estilo.css
+++ b/estilo.css
@@ -30,7 +30,7 @@
     font-family: 'Inter', sans-serif;
     background-color: #F7F7F7;
     color: #011D2D;
-    padding: 40px;
+    padding: 15px;
     
     }
   
@@ -78,6 +78,13 @@ h3 {
   
 
   /* Menú */
+
+
+  #menuResponsive {
+    visibility: hidden;
+    display: none;
+  }
+
 header {
   text-align: center;
   display: flex;
@@ -153,10 +160,12 @@ body.fixed-nav li.logo {
 
 /* Inicio */
 
+
+
 #inicio {
 
-  padding-top: 100px;
- padding-bottom: 60px;
+  padding: 20px;
+ 
   text-align: right;
   display: flex;
   flex-wrap: wrap;
@@ -166,31 +175,16 @@ body.fixed-nav li.logo {
   background-repeat: no-repeat;
   background-position: right;
   background-size: 900px;
-  
 
  
 }
+
+
 #inicio img {
   max-width: 100%;
   height: auto;
+  
 }
-button {
-  padding: 20px;
-  background-color: #011D2D;
-  color: #F7F7F7;
-  text-transform: uppercase;
-  letter-spacing: 2pt;
-  font-size: 0.8rem;
-  font-weight: bold;
-  border-radius: 8px;
- 
-
-}
-
-button:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
 
 
 #inicio p{
@@ -198,9 +192,10 @@ button:hover {
   font-size: 1.3rem;
   line-height: 33pt;
   
-  
- 
 }
+
+
+
 
 #inicio h2 {
   text-align: right;
@@ -210,24 +205,74 @@ button:hover {
     padding: 18px;
     font-size: 1.5rem;
 }
+
+
+#inicio_2 {
+
+
+  padding: 50px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+button {
+ 
+  background-color: #011D2D;
+  color: #F7F7F7;
+	border: none;
+	padding: 20px;
+  letter-spacing: 2pt;
+  font-size: 0.8rem;
+
+  text-transform: uppercase;
+  border-radius: 8px;
+	cursor: pointer;
+	outline: inherit;
+ 
+
+}
+
+
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
 .beneficios {
   text-align: center;
   text-transform: uppercase;
-  padding: 20px;
+
   font-weight: bold;
   font-size: 0.8rem;
   letter-spacing: 2pt;
   display: flex;
   justify-content: center;
   align-items: center;
+ 
+  
   
 }
 .beneficios img {
 
-  max-width: 130px;
+  max-width: 200px;
   height: auto;
-  padding: 10px;
+  padding: 20px;
+  
 }
+
+
+
+.beneficios img:hover {
+
+  opacity: 0.3;
+ 
+}
+
+
 
 .beneficios p {
   padding: 10px;
@@ -242,41 +287,16 @@ button:hover {
 
 
 
-/* .elemento_0 {
-  background-color: #eceef1;
-  border-radius: 10% 30% 50% 70%;
-  padding: 30px;
-  
-    -webkit-animation: shadow-drop-bl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-            animation: shadow-drop-bl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+.beneficios h2 {
 
+  text-align: center;
+    font-size: 2 rem;
+    padding: 20px;
+    color: #011D2D;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 12pt;
 }
-
-
- @-webkit-keyframes shadow-drop-bl {
-  0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
-  100% {
-    -webkit-box-shadow: -12px 12px 20px -12px rgba(0, 0, 0, 0.40);
-            box-shadow: -12px 12px 20px -12px rgba(0, 0, 0, 0.40);
-  }
-}
-@keyframes shadow-drop-bl {
-  0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
-  100% {
-    -webkit-box-shadow: -12px 12px 20px -12px rgba(0, 0, 0, 0.40);
-            box-shadow: -12px 12px 20px -12px rgba(0, 0, 0, 0.40);
-  }
-} */
-
-
-
-/* Preguntas frecuentes */
 
 
 #preguntas {
@@ -303,13 +323,12 @@ text-align: center;
 #preguntas h2 {
   
     text-align: center;
-    font-size: 1.5rem;
-    padding: 18px;
-    background-color: #06517B;
-    color: #F7F7F7;
+    font-size: 2 rem;
+    padding: 20px;
+    color: #011D2D;
     font-weight: bold;
     text-transform: uppercase;
-    letter-spacing: 2pt;
+    letter-spacing: 12pt;
   }
 
 /* Contacto */
@@ -326,9 +345,8 @@ text-align: center;
   
     text-align: center;
     font-size: 1.5rem;
-    padding: 18px;
-    background-color: #06517B;
-    color: #F7F7F7;
+  padding: 20px;
+    
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 2pt;
@@ -427,89 +445,18 @@ input[type=text]:focus, textarea:focus {
 
 @media only screen and (max-width: 768px) {
     
+#navbar {
+  visibility: none;
+  display: none;
+}
 
-  /* Menú */
-  header {
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #F7F7F7;
-    height: 25vh;
-  }
-  
-  header img {
-    width: 400px;
-    height: auto;
-  }
-  
-  nav#navbar {
-    font-size: 0.8rem;
-    font-family: 'Inter', sans-serif;
-    background: #06517B;
-    top: 0;
-    
-    width: 100%;
-    transition: all 0.5s linear;
-    z-index: 1;
-    
-  }
-  ul.menu-list {
-    
-    list-style: none;
-   
-  }
-  ul.menu-list li {
-   
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    padding: 10px ;
-  }
-  ul.menu-list li.logo {
-    max-width: 0;
-   
-    transition: all 0.5s linear;
-  }
-  
-  
-  ul.menu-list li.logo > a {
-    color:#011D2D;
-    display: none;
-  }
-  
-  i {
-    padding: 15px 30px 0px 30px;
-    color: #F7F7F7;
-    display: none;
-    visibility: none;
-    
-  }
-  
-  ul.menu-list li > a {
-    text-decoration: unset;
-    display: flex;
-    color: #fff;
-    transition: 0.2s linar;
-    text-transform: uppercase;
-    letter-spacing: 2pt;
-    padding-top: 10px
-    
-  }
-  body.fixed-nav nav#navbar {
-    position: fixed;
-    box-shadow: 0 1px 2px rgb(0 0 0 / 20%);
-  }
-  body.fixed-nav li.logo {
-    max-width: 300px;
-  }
 
 
 /* Inicio */
 
 #inicio {
 
-  padding-top: 100px;
+  padding-top: 25px;
  padding-bottom: 60px;
   text-align: center;
   display: flex;
@@ -524,9 +471,38 @@ input[type=text]:focus, textarea:focus {
 
  
 }
+
+
+#menuResponsive {
+  visibility: visible;
+  display: flex;
+  width: 100%;
+  
+
+}
+
+#menuItems a {
+  
+  text-align: center;
+  background-color: #06517B;
+  color: #F7F7F7;
+  font-size: 0.8rem;
+  font-weight: bold;
+  padding: 15px;
+  
+}
+
+header {
+  visibility: none;
+  display: none;
+}
+
+
 #inicio img {
   max-width: 100%;
   height: auto;
+
+
 }
 
 
@@ -549,10 +525,27 @@ input[type=text]:focus, textarea:focus {
   line-height: 33pt;
     letter-spacing: 1pt;
     padding: 18px;
-    font-size: 1.5rem;
+    font-size: 1.rem;
 }
 
-button {
+#inicio_2 {
+
+
+  padding-top: 50px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.imagen {
+
+padding: 50px 50px 60px 50px;
+  max-width: 100%;
+  
+}
+
+.boton {
   padding: 20px;
   background-color: #011D2D;
   color: #F7F7F7;
@@ -591,14 +584,52 @@ button:hover {
   padding: 10px;
 }
 
-.beneficios p {
-  padding: 10px;
+
+.beneficios h2 {
+
+  text-align: center;
+    font-size: 2 rem;
+    padding: 20px;
+    color: #011D2D;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 8pt;
 }
 
-.dedo p {
 
-  padding: 17px;
+#preguntas {
+ 
+  background-image: url(img/jj.png);
+  background-repeat: no-repeat;
+  background-position:  center;
+  background-size: 600px;
+  font-size: 1.1rem;
+ 
 }
+
+.bloque_1 {
+padding: 30px;
+text-align: center;
+
+}
+
+.espacio {
+  padding-top: 25px;
+  padding-bottom: 35px;
+}
+
+#preguntas h2 {
+  
+    text-align: center;
+    font-size: 2 rem;
+    padding: 20px;
+    color: #011D2D;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 8pt;
+    line-height: 45px;
+  }
+
 
 
 }
