--- a/estilo.css
+++ b/estilo.css
@@ -25,6 +25,7 @@
     box-sizing: border-box; }
   
   body {
+    margin: 0;
     height: 100%;
     font-size: 12px;
     font-family: 'Inter', sans-serif;
@@ -63,7 +64,7 @@
 h3 {
 
   font-size: 1rem;
-  text-transform: uppercase;
+  text-transform:inherit ;
   letter-spacing: 2pt;
   font-weight: bold;
 }
@@ -164,7 +165,7 @@ body.fixed-nav li.logo {
 
 #inicio {
 
-  padding: 20px;
+  padding-top: 30px;
  
   text-align: right;
   display: flex;
@@ -183,6 +184,7 @@ body.fixed-nav li.logo {
 #inicio img {
   max-width: 100%;
   height: auto;
+ padding: 20%;
   
 }
 
@@ -191,10 +193,10 @@ body.fixed-nav li.logo {
 
   font-size: 1.3rem;
   line-height: 33pt;
+  text-align: right;
+  
   
 }
-
-
 
 
 #inicio h2 {
@@ -203,21 +205,46 @@ body.fixed-nav li.logo {
   line-height: 33pt;
     letter-spacing: 1pt;
     padding: 18px;
+    
     font-size: 1.5rem;
 }
 
-
 #inicio_2 {
-
-
-  padding: 50px;
-  text-align: center;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  padding: 30px;
+
+}
+
+#inicio_2 h2 {
+  text-align: left;
+  font-weight: bold;
+  line-height: 33pt;
+    letter-spacing: 2.5pt;
+text-transform: uppercase;
+    font-size: 1.8rem;
+    color: #011D2D;
+}
+
+#inicio_2 p {
+text-align: left;
+font-size: 1.3rem;
+line-height: 33pt;
+
+
 }
 
 
+#inicio_2 img {
+
+  width: px;
+  height: auto;
+
+  
+}
 
 
 button {
@@ -228,7 +255,7 @@ button {
 	padding: 20px;
   letter-spacing: 2pt;
   font-size: 0.8rem;
-
+text-align: right;
   text-transform: uppercase;
   border-radius: 8px;
 	cursor: pointer;
@@ -244,17 +271,19 @@ button:hover {
 
 .beneficios {
   text-align: center;
-  text-transform: uppercase;
-
+padding: 20px;
   font-weight: bold;
   font-size: 0.8rem;
   letter-spacing: 2pt;
   display: flex;
   justify-content: center;
   align-items: center;
- 
   
-  
+}
+
+.beneficios p{
+  text-transform: uppercase;
+  padding: 10px;
 }
 .beneficios img {
 
@@ -264,18 +293,10 @@ button:hover {
   
 }
 
-
-
 .beneficios img:hover {
 
   opacity: 0.3;
  
-}
-
-
-
-.beneficios p {
-  padding: 10px;
 }
 
 .dedo p {
@@ -283,7 +304,13 @@ button:hover {
   padding: 17px;
 }
 
+.beneficios h3 {
+  text-align: center;
+  font-size: 1rem;
+  line-height: 20px;
+  color: #09C3F1;
 
+}
 
 
 
@@ -434,14 +461,29 @@ input[type=text]:focus, textarea:focus {
 /* footer */
 
 
-
 #footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  bottom: 0;
+  width: 100%;
+  background-color: #06517B;
+  padding: 30px;
+  overflow: hidden;
   height: 300px;
-  background-color: #B2C5CE;
+ 
+  font-size: 0.8rem;
+  color: white;
+  text-align: right;
+ }
+
+#footer h2 {
+padding: 10px;
+text-align: right;
+font-size: 1rem;
+font-weight: bold;
+letter-spacing: 2pt;
+line-height: 20px;
+color: ;
 }
+
 
 @media only screen and (max-width: 768px) {
     
@@ -502,17 +544,16 @@ header {
   max-width: 100%;
   height: auto;
 
-
 }
 
 
 #inicio p{
 
-  font-size: 1.3rem;
-  line-height: 33pt;
+  font-size: 1.5rem;
+  line-height: 30pt;
+  text-align: center;
+  padding: 20px;
   
-  
- 
 }
 
 #inicio h1 {
@@ -524,26 +565,32 @@ header {
   font-weight: bold;
   line-height: 33pt;
     letter-spacing: 1pt;
-    padding: 18px;
-    font-size: 1.rem;
+    padding: 15px;
+    font-size: 1.8rem;
 }
 
-#inicio_2 {
 
-
-  padding-top: 50px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#inicio_2 img {
+display: none;
+visibility: none;
 }
 
-.imagen {
+#inicio_2 p {
+text-align: center;
+font-size: 1.5rem;
+line-height: 30pt;
+padding: 20px;
 
-padding: 50px 50px 60px 50px;
-  max-width: 100%;
-  
-}
+  }
+  #inicio_2 h2 {
+    text-align: center;
+    font-weight: bold;
+    line-height: 33pt;
+      letter-spacing: 2.5pt;
+  text-transform: uppercase;
+      font-size: 1.8rem;
+      color: #011D2D;
+  }
 
 .boton {
   padding: 20px;
@@ -556,10 +603,6 @@ padding: 50px 50px 60px 50px;
   border-radius: 8px;
  
 
-}
-
-button:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 
@@ -579,7 +622,7 @@ button:hover {
 
 .beneficios img {
 
-  max-width: 130px;
+  max-width: 180px;
   height: auto;
   padding: 10px;
 }
@@ -588,12 +631,36 @@ button:hover {
 .beneficios h2 {
 
   text-align: center;
-    font-size: 2 rem;
+    font-size: 2rem;
     padding: 20px;
     color: #011D2D;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 8pt;
+}
+
+.beneficios p {
+
+  text-align: center;
+    font-size: 1rem;
+    padding: 20px;
+    color: #011D2D;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2pt;
+}
+
+
+.beneficios h3{
+
+  text-align: center;
+    font-size: 1.2rem;
+    padding: 20px;
+    color: #011D2D;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2pt;
+    line-height: 28pt;
 }
 
 
@@ -603,7 +670,7 @@ button:hover {
   background-repeat: no-repeat;
   background-position:  center;
   background-size: 600px;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
  
 }
 
@@ -621,15 +688,169 @@ text-align: center;
 #preguntas h2 {
   
     text-align: center;
-    font-size: 2 rem;
-    padding: 20px;
+    font-size: 2rem;
     color: #011D2D;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 8pt;
-    line-height: 45px;
+    
+  }
+  #preguntas h3{
+  
+    text-align: center;
+    font-size: 1.4rem;
+    padding: 20px;
+    color: #011D2D;
+    font-weight: bold;
+    
+    
   }
 
+  
 
+}
 
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  {
+
+  #inicio {
+    text-align: center;
+  }
+    #inicio img {
+      width: 90%;
+      height: auto;
+text-align: center;
+    
+    }
+    
+    
+    #inicio p{
+    
+      font-size: 1.5rem;
+      line-height: 30pt;
+      text-align: center;
+      padding: 20px;
+      
+    }
+    
+    #inicio h1 {
+      text-align: center;
+      font-size: 1.7;
+    }
+    
+    #inicio h2 {
+      text-align: center;
+      font-weight: bold;
+      line-height: 33pt;
+        letter-spacing: 1pt;
+        padding: 15px;
+        font-size: 1.9rem;
+    }
+    
+    
+    #inicio_2 img {
+      display: none;
+      visibility: none;
+    }
+    
+    #inicio_2 p {
+     font-size: 1.5rem;
+    line-height: 38pt;
+    text-align: center;
+    padding: 20px;
+    
+      }
+      #inicio_2 h2 {
+        text-align: center;
+        font-weight: bold;
+        line-height: 33pt;
+          letter-spacing: 1pt;
+          padding: 15px;
+          font-size: 1.9rem;
+      }
+    
+    .boton {
+      padding: 25px;
+      background-color: #011D2D;
+      color: #F7F7F7;
+      text-transform: uppercase;
+      letter-spacing: 2pt;
+      font-size: 1rem;
+      font-weight: bold;
+      border-radius: 8px;
+     
+     
+    
+    }
+
+    #inicio [class*="col-md-6"] {
+      width: 100%;
+    }
+    #inicio_2 [class*="col-md-6"] {
+      width: 100%;
+    }
+    
+    .beneficios {
+      text-align: center;
+      text-transform: uppercase;
+      padding: 20px;
+      font-weight: bold;
+      font-size: 0.8rem;
+      letter-spacing: 2pt;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+    }
+    
+    
+    .beneficios img {
+    
+      max-width: 180px;
+      height: auto;
+      padding: 10px;
+    }
+    
+    
+    .beneficios h2 {
+    
+      text-align: center;
+        font-size: 2rem;
+        padding: 20px;
+        color: #011D2D;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 8pt;
+    }
+    
+    .beneficios p {
+    
+      text-align: center;
+        font-size: 1rem;
+        padding: 20px;
+        color: #011D2D;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 2pt;
+    }
+    
+    
+    .beneficios h3{
+    
+      text-align: center;
+        font-size: 1.2rem;
+        padding: 20px;
+        color: #011D2D;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 2pt;
+        line-height: 28pt;
+    }
+
+.beneficios [class*="col-md-3"] {
+  width: 50%;
+}
+    
 }
