--- a/estilo.css
+++ b/estilo.css
@@ -598,7 +598,24 @@ opacity: 1;
   display: none;
 }
 
+[class*="texto"] {
+  width: 100%;
+}
 
+[class*="dedo"] {
+  width: 50%;
+}
+[class*="ropa"] {
+  width: 50%;
+}
+
+[class*="pelvis"] {
+  width: 50%;
+}
+
+[class*="ambulatorio"] {
+  width: 50%;
+}
 
 /* Inicio */
 
@@ -611,21 +628,26 @@ opacity: 1;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+ 
+
+}
+
+
+
+.elemento {
   background-image: url(img/elemento0.png);
   background-repeat: no-repeat;
   background-position: right;
-  background-size: 900px;
-  
-
- 
+  background-size: 80%;
 }
-
 
 #menuResponsive {
   visibility: visible;
   display: flex;
   width: 100%;
   position: sticky;
+  justify-content: center;
+  align-items: center;
   
 
 }
@@ -650,6 +672,8 @@ header {
 #inicio img {
   max-width: 100%;
   height: auto;
+  display: none;
+  visibility: none;
 
 }
 
@@ -660,6 +684,7 @@ header {
   line-height: 30pt;
   text-align: center;
   padding: 20px;
+  
   
 }
 
@@ -678,8 +703,11 @@ header {
 
 
 #inicio_2 img {
-display: none;
-visibility: none;
+  max-width: 300px;
+  height: auto;
+  padding-bottom: 30px;
+/* display: none;
+visibility: none; */
 }
 
 #inicio_2 p {
@@ -698,6 +726,11 @@ padding: 20px;
       font-size: 1.8rem;
       color: #011D2D;
   }
+
+  /* #inicio_2 {
+    display: none;
+    visibility: none;
+  } */
 
 .boton {
   padding: 20px;
@@ -818,338 +851,190 @@ text-align: center;
 }
 
 @media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  {
+   and (min-device-width: 375px) 
+   and (max-device-width: 667px) 
+   {
 
-  #inicio {
-    text-align: center;
-  }
-    #inicio img {
-      width: 90%;
-      height: auto;
-text-align: center;
-    
-    }
-    
-    
-    #inicio p{
-    
-      font-size: 1.5rem;
-      line-height: 30pt;
-      text-align: center;
-      padding: 20px;
-      
-    }
-    
-    #inicio h1 {
-      text-align: center;
-      font-size: 1.7;
-    }
-    
-    #inicio h2 {
-      text-align: center;
-      font-weight: bold;
-      line-height: 33pt;
-        letter-spacing: 1pt;
-        padding: 15px;
-        font-size: 1.9rem;
-    }
-    
-    
-    #inicio_2 img {
-      display: none;
-      visibility: none;
-    }
-    
-    #inicio_2 p {
-     font-size: 1.5rem;
-    line-height: 38pt;
-    text-align: center;
-    padding: 20px;
-    
-      }
-      #inicio_2 h2 {
-        text-align: center;
-        font-weight: bold;
-        line-height: 33pt;
-          letter-spacing: 1pt;
-          padding: 15px;
-          font-size: 1.9rem;
-      }
-    
-    .boton {
-      padding: 25px;
-      background-color: #011D2D;
-      color: #F7F7F7;
-      text-transform: uppercase;
-      letter-spacing: 2pt;
-      font-size: 1rem;
-      font-weight: bold;
-      border-radius: 8px;
-     
-     
-    
-    }
 
-    #inicio [class*="col-md-6"] {
-      width: 100%;
+    
+     #menuResponsive {
+       visibility: visible;
+       display: flex;
+       width: 100%;
+       text-align: center;
+
+
+
+     }
+
+    .navbar-brand {
+      width: 50%;
     }
-    #inicio_2 [class*="col-md-6"] {
-      width: 100%;
-    }
-    
-    .beneficios {
-      text-align: center;
-      text-transform: uppercase;
-      padding: 20px;
-      font-weight: bold;
-      font-size: 0.8rem;
-      letter-spacing: 2pt;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      
-    }
-    
-    
-    .beneficios img {
-    
-      max-width: 180px;
-      height: auto;
-      padding: 10px;
-    }
-    
-    
-    .beneficios h2 {
-    
-      text-align: center;
-        font-size: 2rem;
-        padding: 20px;
-        color: #011D2D;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 8pt;
-    }
-    
-    .beneficios p {
-    
-      text-align: center;
+     #menuItems a {
+
+       background-color: #06517B;
+       color: #F7F7F7;
+       font-size: 0.8rem;
+       font-weight: bold;
+       padding: 15px;
+
+     }
+
+     #inicio {
+       text-align: center;
+     }
+       #inicio img {
+         width: 100%;
+         height: auto;
+   text-align: center;
+
+       }
+
+
+       #inicio p{
+
+         font-size: 1rem;
+         line-height: 22pt;
+         text-align: center;
+         padding: 20px;
+
+       }
+
+       #inicio h1 {
+         text-align: center;
+         font-size: 1.5rem;
+       }
+
+       #inicio h2 {
+         text-align: center;
+         font-weight: bold;
+         line-height: 22pt;
+           letter-spacing: 1pt;
+           padding: 15px;
+           font-size: 1.2rem;
+       }
+
+
+       #inicio_2  {
+         display: none;
+         visibility: none;
+       }
+
+       #inicio_2 p {
         font-size: 1rem;
-        padding: 20px;
-        color: #011D2D;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 2pt;
-    }
-    
-    
-    .beneficios h3{
-    
-      text-align: center;
-        font-size: 1.2rem;
-        padding: 20px;
-        color: #011D2D;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 2pt;
-        line-height: 28pt;
-    }
+       line-height: 22pt;
+       text-align: center;
+       padding: 20px;
 
-.beneficios [class*="col-md-3"] {
-  width: 50%;
-}
-    
-}
 
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  {
+         }
+         #inicio_2 h2 {
+           text-align: center;
+           font-weight: bold;
 
-    #menuResponsive {
-      visibility: visible;
-      display: flex;
-      width: 100%;
-      text-align: center;
-      position: sticky;
-    
+             letter-spacing: 1pt;
+             padding: 15px;
+             font-size: 1.2rem;
+         }
 
-    }
-    
-   .navbar-brand {
-     width: 50%;
-   }
-    #menuItems a {
-      
-      background-color: #06517B;
-      color: #F7F7F7;
-      font-size: 0.8rem;
-      font-weight: bold;
-      padding: 15px;
-      
-    }
-    
-    #inicio {
-      text-align: center;
-    }
-      #inicio img {
-        display: none;
-        visibility: none;
-      
-      }
-      
-      
-      #inicio p{
-      
-        font-size: 1rem;
-        line-height: 22pt;
-        text-align: center;
-        padding: 20px;
-        
-      }
-      
-      #inicio h1 {
-        text-align: center;
-        font-size: 1.5rem;
-      }
-      
-      #inicio h2 {
-        text-align: center;
-        font-weight: bold;
-        line-height: 22pt;
-          letter-spacing: 1pt;
-          padding: 15px;
-          font-size: 1.2rem;
-      }
-      
-      
-      #inicio_2  {
-        display: none;
-        visibility: none;
-      }
-      
-      #inicio_2 p {
-       font-size: 1rem;
-      line-height: 22pt;
-      text-align: center;
-      padding: 20px;
-     
-      
-        }
-        #inicio_2 h2 {
+
+         .beneficios {
           text-align: center;
+          text-transform: uppercase;
+          padding: 25px;
           font-weight: bold;
-          
-            letter-spacing: 1pt;
-            padding: 15px;
-            font-size: 1.2rem;
+          font-size: 0.8rem;
+          letter-spacing: 2pt;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        
+   
+        }
+   
+   
+        .beneficios img {
+   
+          max-width: 150px;
+          height: auto;
+   
         }
 
 
-    .beneficios {
-      text-align: center;
-      text-transform: uppercase;
-      padding: 25px;
-      font-weight: bold;
-      font-size: 0.8rem;
-      letter-spacing: 2pt;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      
-    }
-    
-    
-    .beneficios img {
-    
-      max-width: 150px;
-      height: auto;
-      
-    }
-    
-    
-    .beneficios h2 {
-    
-      text-align: center;
-        font-size: 2rem;
-        padding: 20px;
-        color: #011D2D;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 8pt;
-    }
-    
-    .beneficios p {
-    
-      text-align: center;
-        font-size: 1rem;
-        padding: 20px;
-        color: #011D2D;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 2pt;
-    }
-    
-    
-    .beneficios h3{
-    
-      text-align: center;
-        font-size: 1rem;
-        padding: 10px;
-        color: #011D2D;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 2pt;
-        line-height: 20pt;
-    }
+     .beneficios h2 {
 
-    #preguntas {
- 
-      background-image: url(img/jj.png);
-      background-repeat: no-repeat;
-      background-position:  center;
-      background-size: 600px;
-      font-size: 1rem;
-     
-    }
-    
-    .bloque_1 {
-    padding: 30px;
-    text-align: center;
-    
-    }
-    
-    .espacio {
-      padding-top: 15px;
-      padding-bottom: 25;
-    }
-    
-    #preguntas h2 {
-      
-        text-align: center;
-        font-size: 2rem;
-        color: #011D2D;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 6pt;
-        line-height: 33pt;
-        
+       text-align: center;
+         font-size: 2rem;
+         padding: 20px;
+         color: #011D2D;
+         font-weight: bold;
+         text-transform: uppercase;
+         letter-spacing: 8pt;
+     }
+
+     .beneficios p {
+
+       text-align: center;
+         font-size: 1rem;
+         padding: 20px;
+         color: #011D2D;
+         font-weight: bold;
+         text-transform: uppercase;
+         letter-spacing: 2pt;
+     }
+
+
+     .beneficios h3{
+
+       text-align: center;
+         font-size: 1rem;
+         padding: 10px;
+         color: #011D2D;
+         font-weight: bold;
+         text-transform: uppercase;
+         letter-spacing: 2pt;
+         line-height: 20pt;
+     }
+
+     #preguntas {
+
+       background-image: url(img/jj.png);
+       background-repeat: no-repeat;
+       background-position:  center;
+       background-size: 600px;
+       font-size: 1rem;
+
+     }
+
+     .bloque_1 {
+     padding: 30px;
+     text-align: center;
+
+     }
+
+     .espacio {
+       padding-top: 25px;
+       padding-bottom: 35px;
+     }
+
+     #preguntas h2 {
+
+         text-align: center;
+         font-size: 2rem;
+         color: #011D2D;
+         font-weight: bold;
+         text-transform: uppercase;
+         letter-spacing: 8pt;
+
+       }
+       #preguntas h3{
+
+         text-align: center;
+         font-size: 1.2rem;
+         padding: 20px;
+         color: #011D2D;
+         font-weight: bold;
+
+
+       }
       }
-      #preguntas h3{
-      
-        text-align: center;
-        font-size: 1.2rem;
-        padding: 20px;
-        color: #011D2D;
-        font-weight: bold;
-        
-        
-      }
-    
-      iframe {
-        display: none;
-        visibility: none;
-      }
-    
-  }
