--- a/estilo.css
+++ b/estilo.css
@@ -174,7 +174,7 @@ body.fixed-nav li.logo {
 
 #inicio {
 
-  padding-top: 30px;
+  padding-top: 20px;
  
   text-align: right;
   display: flex;
@@ -471,55 +471,56 @@ input[type=text]:focus, textarea:focus {
 }
 /* footer */
 
-/* 
-#footer {
-  bottom: 0;
-  width: 100%;
-  background-color: #06517B;
-  padding: 30px;
-  overflow: hidden;
-  height: 400px;
- 
-  font-size: 0.8rem;
-  color: white;
-  text-align: right;
-  
 
- }
 
-#footer h2 {
-padding: 10px;
-text-align: right;
-font-size: 1rem;
-font-weight: bold;
-letter-spacing: 2pt;
-line-height: 20px;
- */
 
-#footer img {
-  max-width: 300px;
-
-}
 #footer {
    background-color: #12344d;
    color: #F7F7F7;
    
+  
 
+   
+
+}
+
+.iconos  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  flex-direction: row;
+  transform: scale(1.5);
 }
 
 #footer i {
-  color: white;
-  text-align: center;
-  padding: 30px;
-
+padding: 20px;
+transition: transform .2s;
 
 
 }
+#footer a {
+  list-style: none;
+  text-decoration: none;
+  color: #F7F7F7;
+}
+
+
+#footer i:hover {
+
+ 
+
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5); 
+  
+  }
+
+
 
 #footer p {
   text-align: center;
-
-  font-size: 0.9rem;
+line-height: 30px;
+  font-size: 1.2rem;
 
 }
 #footer h2 {
@@ -527,19 +528,20 @@ line-height: 20px;
   padding: 15px;
   font-size: 1.5rem;
   font-weight: bold;
+  letter-spacing: 2pt;
+  
 }
 
 #footer h3 {
   text-align: center;
   text-transform: uppercase;
+  font-size: 1.3rem;
 }
 .ubicacion {
   padding: 20px;
 }
 
-iframe {
-  padding-top: 25px;
-}
+
 
 .aparece {
   position: relative;
@@ -651,7 +653,10 @@ opacity: 1;
   
 
 }
-
+#menuResponsive img {
+  height: 150px;
+  width: 100%;
+}
 #menuItems a {
   
   text-align: center;
@@ -659,7 +664,7 @@ opacity: 1;
   color: #F7F7F7;
   font-size: 0.8rem;
   font-weight: bold;
-  padding: 15px;
+  padding: 10px;
   
 }
 
@@ -846,7 +851,79 @@ text-align: center;
     
   }
 
+  /* footer */
+
+
+
+
+#footer {
+  background-color: #12344d;
+  color: #F7F7F7;
   
+ 
+
+  
+
+}
+
+.iconos  {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: 30px;
+ flex-direction: row;
+ transform: scale(1.3);
+}
+
+#footer i {
+padding: 20px;
+transition: transform .2s;
+
+
+}
+#footer a {
+ list-style: none;
+ text-decoration: none;
+ color: #F7F7F7;
+}
+
+
+#footer i:hover {
+
+
+
+ -webkit-transform: scale(1.5);
+ transform: scale(1.5); 
+ 
+ }
+
+
+
+#footer p {
+ text-align: center;
+line-height: 30px;
+ font-size: 1rem;
+
+}
+#footer h2 {
+ text-align: center;
+ padding: 15px;
+ font-size: 1.3rem;
+ font-weight: bold;
+ letter-spacing: 2pt;
+ line-height: 28px;
+ 
+}
+
+#footer h3 {
+ text-align: center;
+ text-transform: uppercase;
+ font-size: 1rem;
+}
+.ubicacion {
+ padding: 20px;
+}
+
 
 }
 
@@ -866,6 +943,11 @@ text-align: center;
 
 
      }
+
+     #menuResponsive img {
+      height: 150px;
+      width: 100%;
+    }
 
     .navbar-brand {
       width: 50%;
