error en scroll horizontal iphone

--- a/estilo.css
+++ b/estilo.css
@@ -89,7 +89,7 @@ body {
 }
 
 main {
- padding: 80px 10px  10px 80px
+ padding:  20px
 
 }
 
@@ -447,13 +447,19 @@ video {
 
 /* Contacto */
 
-#contacto {
+.formulario {
 
   padding: 30px;
   text-align: center;
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+ 
   color: #011D2D;
+  
 
+}
+
+#contacto {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 30px;
 }
 
 #contacto h2 {
@@ -467,11 +473,6 @@ video {
   letter-spacing: 2pt;
 }
 
-
-.bloque_2 {
-
-  background-color: #F7F7F7;
-}
 
 input,
 label,
@@ -545,14 +546,6 @@ textarea:focus {
   border: 2px solid #011D2D;
 }
 
-
-#validacion {
-
-  text-align: center;
-  font-weight: italic;
-  font-size: 0.8rem;
-  padding-top: 15px;
-}
 
 
 /* Footer */
@@ -1029,6 +1022,13 @@ textarea:focus {
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
 
+
+  main {
+    padding: 0px 0px  0px 0px;
+    overflow: hidden;
+    
+   
+   }
   /* Menu */
 
   #menuResponsive {
@@ -1042,7 +1042,7 @@ textarea:focus {
   }
 
   #menuResponsive img {
-    height: 150px;
+    height: 180px;
     width: 100%;
   }
 
@@ -1138,25 +1138,24 @@ textarea:focus {
   }
 
   [class*="dedo"] {
-    width: 70%;
+    width: 90%;
   }
 
   [class*="ropa"] {
-    width: 70%;
+    width: 90%;
   }
 
   [class*="pelvis"] {
-    width: 70%;
+    width: 90%;
   }
 
   [class*="ambulatorio"] {
-    width: 70%;
+    width: 90%;
   }
 
   .beneficios img {
 
-    max-width: 100%;
-    height: auto;
+   overflow: hidden;
 
   }
 
@@ -1164,19 +1163,19 @@ textarea:focus {
   .beneficios h2 {
 
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 20px;
     color: #011D2D;
     font-weight: bold;
     text-transform: uppercase;
-    letter-spacing: 8pt;
+    letter-spacing: 3pt;
   }
 
   .beneficios p {
 
     text-align: center;
     font-size: 0.8rem;
-    padding: 20px;
+    padding: 15px;
     color: #011D2D;
     font-weight: bold;
     text-transform: uppercase;
@@ -1195,7 +1194,9 @@ textarea:focus {
     letter-spacing: 2pt;
     line-height: 20pt;
   }
-
+video {
+  width: 100%;
+}
 
   /* Preguntas */
   #preguntas {
@@ -1222,11 +1223,13 @@ textarea:focus {
   #preguntas h2 {
 
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.2rem;
     color: #011D2D;
     font-weight: bold;
     text-transform: uppercase;
-    letter-spacing: 8pt;
+    letter-spacing: 2pt;
+    overflow: hidden;
+    line-height: 30px;
 
   }
 
@@ -1240,4 +1243,181 @@ textarea:focus {
 
 
   }
+
+
+  /* contacto */
+
+
+  .formulario {
+
+    padding: 30px;
+    text-align: center;
+    color: #011D2D;
+    
+  
+  }
+  
+  #contacto {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 30px;
+  }
+
+  
+  #contacto h2 {
+  
+    text-align: center;
+    font-size: 1.2rem;
+    padding: 20px;
+  
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2pt;
+  }
+  
+  
+  input,
+  label,
+  textarea {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    padding: 10px;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    letter-spacing: 2pt;
+  
+  
+  }
+  
+  
+  input[type=text],
+  select {
+    width: 100%;
+    padding: 20px;
+    
+    display: inline-block;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    outline: none;
+  }
+  
+  textarea {
+    width: 100%;
+    height: 150px;
+    padding: 20px;
+    
+    display: inline-block;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  
+    color: #12344d;
+    outline: none;
+  }
+  
+  .enviar {
+    width: 100%;
+    background-color: #044b73;
+    color: white;
+  padding: 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    letter-spacing: 3pt;
+  
+  }
+  
+  .enviar:hover {
+  
+    background-color: #011D2D;
+    color: #F7F7F7;
+  }
+  
+  input[type=text]:focus,
+  textarea:focus {
+    border: 2px solid #011D2D;
+  }
+  
+  
+
+
+  /* footer */
+
+  #footer {
+    background-color: #12344d;
+    color: #F7F7F7;
+
+  }
+
+  .iconos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    flex-direction: row;
+
+  }
+
+  #footer i {
+    padding: 10px;
+    transition: transform .2s;
+
+
+  }
+
+  #footer a {
+    list-style: none;
+    text-decoration: none;
+    color: #F7F7F7;
+  }
+
+
+  #footer i:hover {
+
+
+
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+
+  }
+
+
+
+  #footer p {
+    text-align: center;
+    line-height: 25px;
+    font-size: 0.8rem;
+
+  }
+
+  #footer h2 {
+    text-align: center;
+    padding: 15px;
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 2pt;
+    line-height: 22px;
+
+  }
+
+  #footer h3 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+  }
+
+  .ubicacion {
+    padding: 20px;
+  }
+
+
+
 }
